<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000fff"
    tools:context=".CreateMenu" >

    

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

    


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

                <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/sectionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/className"
                android:layout_alignParentTop="true"
                android:layout_marginTop="27dp"
                android:text="@string/text_class_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/StudentNumItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/className"
                android:layout_below="@+id/className"
                android:layout_marginTop="26dp"
                android:text="@string/text_num_students"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/className"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sectionText"
                android:layout_marginLeft="16dp"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/className"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="92dp"
                android:onClick="saveClassList"
                android:layout_below="@+id/sa3"
                android:text="@string/text_save" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="50dp"
                android:text="Student Assistant 3"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/sa1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/lecturer"
                android:layout_below="@+id/numOfAbsencesVal"
                android:ems="10" />

            <EditText
                android:id="@+id/sa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView5"
                android:ems="10" />

            <EditText
                android:id="@+id/sa3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignRight="@+id/sa2"
                android:layout_below="@+id/textView6"
                android:ems="10" />

            <EditText
                android:id="@+id/numStud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/StudentNumItem"
                android:layout_below="@+id/StudentNumItem"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/numStud"
                android:layout_below="@+id/numStud"
                android:text="Lecturer"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/lecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:ems="10" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/sa1"
                android:layout_below="@+id/sa1"
                android:text="Student Assistant 2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/numOfAbsencesVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lecturer"
                android:layout_below="@+id/lecturer"
                android:text="Student Assistant 1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </ScrollView>
	
    </FrameLayout>
    
</FrameLayout>
